cmake_minimum_required(VERSION 3.23)
project(algorithm_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm_cpp main.cpp)

add_executable(01-in-and-out basics/in-and-out.cpp)
add_executable(substr basics/substr.cpp)
add_executable(split basics/split.cpp)
add_executable(atoi basics/atoi.cpp)
add_executable(input-cin-by-string basics/input-cin-by-string.cpp)
add_executable(input-cin-by-scanf basics/input-cin-by-scanf.cpp)
add_executable(getline basics/getline.cpp)
add_executable(cout basics/cout.cpp)
add_executable(printf basics/printf.cpp)
add_executable(vector basics/vector.cpp)
add_executable(vector-function vector-function.cpp)
add_executable(vector-array basics/vector-array.cpp)
add_executable(vector-two-array basics/vector-two-array.cpp)
add_executable(array basics/array.cpp)
add_executable(vector-init basics/vector-init.cpp)
add_executable(array-memcpy array-memcpy.cpp)
add_executable(pair-and-tuple basics/pair-and-tuple.cpp)