cmake_minimum_required(VERSION 3.23)
project(algorithm_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm_cpp main.cpp)

add_executable(01-in-and-out basics/in-and-out.cpp)
add_executable(substr basics/substr.cpp)
add_executable(split basics/split.cpp)
add_executable(atoi basics/atoi.cpp)
add_executable(input-cin-by-string basics/input-cin-by-string.cpp)
add_executable(input-cin-by-scanf basics/input-cin-by-scanf.cpp)
add_executable(getline basics/getline.cpp)
add_executable(cout basics/cout.cpp)
add_executable(printf basics/printf.cpp)
add_executable(vector basics/vector.cpp)
add_executable(vector-function basics/vector-function.cpp)
add_executable(vector-array basics/vector-array.cpp)
add_executable(vector-two-array basics/vector-two-array.cpp)
add_executable(array basics/array.cpp)
add_executable(vector-init basics/vector-init.cpp)
add_executable(array-memcpy basics/array-memcpy.cpp)
add_executable(pair-and-tuple basics/pair-and-tuple.cpp)
add_executable(sort-basic basics/sort-basic.cpp)
add_executable(sort-pair basics/sort-pair.cpp)
add_executable(sort-cmp basics/sort-cmp.cpp)
add_executable(map-basic basics/map-basic.cpp)
add_executable(map-default basics/map-default.cpp)
add_executable(unordered-map basics/unordered-map.cpp)
add_executable(set-basic basics/set-basic.cpp)
add_executable(multiset-basic basics/multiset-basic.cpp)
add_executable(stack-basic basics/stack-basic.cpp)
add_executable(queue-basic basics/queue-basic.cpp)
add_executable(queue-loop basics/queue-loop.cpp)
add_executable(deque-basic basics/deque-basic.cpp)
add_executable(struct-basic basics/struct-basic.cpp)
add_executable(priority-queue-basic basics/priority-queue-basic.cpp)
add_executable(priority-queue-struct basics/priority-queue-struct.cpp)
add_executable(pointer-basic basics/pointer-basic.cpp)
add_executable(pointer-map basics/pointer-map.cpp)
add_executable(iterator-basic basics/iterator-basic.cpp)
add_executable(call-by-reference basics/call-by-reference.cpp)
add_executable(pointer-array basics/pointer-array.cpp)
add_executable(permutation mathematics/permutation.cpp)
add_executable(permutation-recursion mathematics/permutation-recursion.cpp)